--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-scss-helpers.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-scss-helpers.html
@@ -97,7 +97,22 @@
         </div>
         <div id="sg-scss-helpers-pane-3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="sg-scss-helpers-heading-3">
           <div class="panel-body">
-            TODO: (WIP)
+            <table class="b-body-copy-small">
+              <thead>
+                <tr class="b-body-copy-small">
+                  <td width="20%">Stlye Name</td>
+                  <td width="40%">CSS Classes</td>
+                  <td width="40%">Info</td>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Convert PX to REM</td>
+                  <td><code>rem(24px)</code> // Output 2.4rem</td>
+                  <td>SASS Function pixels to rems</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
