--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-typography.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-typography.html
@@ -49,7 +49,7 @@
     <br /><br />
     <h3 class="b-heading-h5">BodyCopy <small> / and other text Styles</small></h3>
     <ul>
-      <li>Body - <strong>Base font-size:</strong> <code> ?? (TBD)</code></li>
+      <li>Body - <strong>Base font-size:</strong> <code> 1.6rem</code></li>
       <li>Body - <strong>Base font-family:</strong> <code>Arial</code></li>
       <li>Body - <strong>Base font-weight:</strong> <code>normal</code></li>
       <li>Body - <strong>Base line-height:</strong> <code>1.5</code></li>
