--- a/eaton.frontend/src/global/css/_config/mixins/_mixins-typography.scss
+++ b/eaton.frontend/src/global/css/_config/mixins/_mixins-typography.scss
@@ -14,14 +14,14 @@
 //--------------
 @mixin h1-hero--mobile {
   font-family: 'EatonMedium', sans-serif;
-  font-size: 35px;
-  line-height: 40px;
+  font-size: rem(35px);
+  line-height: rem(40px);
 }
 
 @mixin h1-hero--desktop {
   font-family: 'EatonMedium', sans-serif;
-  font-size: 54px;
-  line-height: 68px;
+  font-size: rem(54px);
+  line-height: rem(68px);
 }
 
 @mixin h1-hero {
@@ -37,14 +37,14 @@
 //--------------
 @mixin h1--mobile {
   font-family: 'EatonMedium', sans-serif;
-  font-size: 35px;
-  line-height: 40px;
+  font-size: rem(35px);
+  line-height: rem(40px);
 }
 
 @mixin h1--desktop {
   font-family: 'EatonMedium', sans-serif;
-  font-size: 54px;
-  line-height: 68px;
+  font-size: rem(54px);
+  line-height: rem(68px);
 }
 
 @mixin h1 {
@@ -60,14 +60,14 @@
 //--------------
 @mixin h2--mobile {
   font-family: 'EatonMedium', sans-serif;
-  font-size: 28px;
-  line-height: 32px;
+  font-size: rem(28px);
+  line-height: rem(32px);
 }
 
 @mixin h2--desktop {
   font-family: 'EatonMedium', sans-serif;
-  font-size: 40px;
-  line-height: 50px;
+  font-size: rem(40px);
+  line-height: rem(50px);
 }
 
 @mixin h2 {
@@ -84,14 +84,14 @@
 //--------------
 @mixin h3--mobile {
   font-family: 'EatonMedium', sans-serif;
-  font-size: 28px;
-  line-height: 32px;
+  font-size: rem(28px);
+  line-height: rem(32px);
 }
 
 @mixin h3--desktop {
   font-family: 'EatonMedium', sans-serif;
-  font-size: 40px;
-  line-height: 50px;
+  font-size: rem(40px);
+  line-height: rem(50px);
 }
 
 @mixin h3 {
@@ -108,16 +108,16 @@
 //--------------
 @mixin h4--mobile {
   font-family: Arial, sans-serif;
-  font-size: 22px;
+  font-size: rem(22px);
   font-weight: bold;
-  line-height: 29px;
+  line-height: rem(29px);
 }
 
 @mixin h4--desktop {
   font-family: Arial, sans-serif;
-  font-size: 30px;
+  font-size: rem(30px);
   font-weight: bold;
-  line-height: 42px;
+  line-height: rem(42px);
 }
 
 @mixin h4 {
@@ -133,16 +133,16 @@
 //--------------
 @mixin h5--mobile {
   font-family: Arial, sans-serif;
-  font-size: 20px;
+  font-size: rem(20px);
   font-weight: bold;
-  line-height: 30px;
+  line-height: rem(30px);
 }
 
 @mixin h5--desktop {
   font-family: Arial, sans-serif;
-  font-size: 26px;
+  font-size: rem(26px);
   font-weight: bold;
-  line-height: 40px;
+  line-height: rem(40px);
 }
 
 @mixin h5 {
@@ -158,17 +158,17 @@
 //--------------
 @mixin body-copy--mobile {
   font-family: Arial, sans-serif;
-  font-size: 18px;
+  font-size: rem(18px);
   font-weight: normal;
-  line-height: 28px;
+  line-height: rem(28px);
 }
 
 
 @mixin body-copy--desktop {
   font-family: Arial, sans-serif;
-  font-size: 24px;
+  font-size: rem(24px);
   font-weight: normal;
-  line-height: 38px;
+  line-height: rem(38px);
 }
 
 
@@ -178,8 +178,6 @@
 
   a {
     color: $color__primary-blue;
-
-    // &:active { font-weight: bold; }
   }
 
   @include media-desktop-and-up {
@@ -193,16 +191,16 @@
 //--------------
 @mixin body-copy-small--mobile {
   font-family: Arial, sans-serif;
-  font-size: 13px;
+  font-size: rem(13px);
   font-weight: normal;
-  line-height: 17px;
+  line-height: rem(17px);
 }
 
 @mixin body-copy-small--desktop {
   font-family: Arial, sans-serif;
-  font-size: 18px;
+  font-size: rem(18px);
   font-weight: normal;
-  line-height: 24px;
+  line-height: rem(24px);
 }
 
 @mixin body-copy-small {
@@ -210,8 +208,6 @@
 
   a {
     color: $color__primary-blue;
-
-    // &:active { font-weight: bold; }
   }
 
   @include media-desktop-and-up {
@@ -225,20 +221,21 @@
 //--------------
 @mixin eyebrow-large--mobile {
   font-family: $font-family__secondary;
-  font-size: 17px;
-  line-height: 20px;
+  font-size: rem(17px);
+  line-height: rem(20px);
   text-transform: uppercase;
 }
 
 @mixin eyebrow-large--desktop {
   font-family: $font-family__secondary;
-  font-size: 24px;
-  line-height: 38px;
+  font-size: rem(24px);
+  line-height: rem(38px);
   text-transform: uppercase;
 }
 
 @mixin eyebrow-large {
   font-weight: bold;
+
   @include eyebrow-large--mobile;
 
   @include media-desktop-and-up {
@@ -250,6 +247,7 @@
 @mixin h5-link-bold {
   @include h5;
   font-family: $font-family__primary-bold;
+
   @include media-desktop-and-up {
     font-family: $font-family__primary-bold;
   }
@@ -258,6 +256,7 @@
 @mixin h4-link-bold {
   @include h4;
   font-family: $font-family__primary-bold;
+
   @include media-desktop-and-up {
     font-family: $font-family__primary-bold;
   }
@@ -268,20 +267,21 @@
 //--------------
 @mixin eyebrow-small--mobile {
   font-family: $font-family__secondary;
-  font-size: 14px;
-  line-height: 17px;
+  font-size: rem(14px);
+  line-height: rem(17px);
   text-transform: uppercase;
 }
 
 @mixin eyebrow-small--desktop {
   font-family: $font-family__secondary;
-  font-size: 18px;
-  line-height: 24px;
+  font-size: rem(18px);
+  line-height: rem(24px);
   text-transform: uppercase;
 }
 
 @mixin eyebrow-small {
   font-weight: bold;
+
   @include eyebrow-small--mobile;
 
   @include media-desktop-and-up {
