--- a/eaton.frontend/src/global/css/base/_typography.scss
+++ b/eaton.frontend/src/global/css/base/_typography.scss
@@ -4,11 +4,14 @@
 
 // Typography
 //--------------
+html {
+  font-size: $base__font-size;
+}
 
 body {
   color: $color__primary-gray1;
   font-family: $font-family__secondary;
-  font-size: $base__font-size;  // 16px base-size
+  font-size: rem(16px);
   overflow-x: hidden;
 }
 
@@ -27,7 +30,7 @@ i {
 }
 
 p {
-  line-height: 1.3;
+  line-height: $base__line-height;
 }
 
 a {
@@ -96,12 +99,13 @@ h5,
   }
 
   @include media-desktop-and-up {
+    // TODO: Review this font size after CRUX Feedback
     font-size: 1.625em;
   }
 }
 
 .b-h5-link {
-  font-size: 2.5rem;
+  font-size: rem(25px);
   font-family: $font-family__secondary;
   color: $color__primary-blue;
   font-weight: bold;
@@ -113,6 +117,7 @@ h5,
   }
 
   @include media-desktop-and-up {
+    // TODO: Review this font size after CRUX Feedback
     font-size: 1.625rem;
   }
 }
@@ -120,6 +125,7 @@ h5,
 .b-small-link {
   font-family: $font-family__secondary;
   color: $color__primary-blue;
+  // TODO: Review this font size after CRUX Feedback
   font-size: 1.125em;
 
   &:hover,
@@ -159,35 +165,3 @@ h5,
 .b-h4-link-bold {
   @include h4-link-bold;
 }
-
-
-// Custom Text Elements
-//--------------
-
-// Body Link
-// Used with various typography elements  for link styles
-// Eg: <a href="#" class="body-link body-small-link">...</a>
-// Eg: <a href="#" class="body-link heading-h5">...</a>
-//---------------------
-
-// TODO: TBD
-
-// .body-link {
-//   color: $color__primary-blue;
-//
-//   &:hover,
-//   &:focus,
-//   &:active {
-//     color: $color__accent-darkblue; //TBD
-//   }
-//
-//   .dark-theme & {
-//     color: $color__white;
-//
-//     &:hover,
-//     &:focus,
-//     &:active {
-//       color: $color__white; //TBD
-//     }
-//   }
-// }
