--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-fonts.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-fonts.html
@@ -30,7 +30,7 @@
     <style>
 
       .sg-fonts__sample {
-        font-size: 24px;
+        font-size: 2.4rem;
         line-height: 1.2;
       }
 
