--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/footer/css/footer.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/footer/css/footer.css
@@ -1,10 +1,10 @@
 .eaton-footer-top { background: #5B6770; padding: 60px 0; }
 
-.eaton-footer-top .eaton-text-default__content { font-family: Arial, sans-serif; font-size: 13px; font-weight: normal; line-height: 17px; }
+.eaton-footer-top .eaton-text-default__content { font-family: Arial, sans-serif; font-size: 1.3rem; font-weight: normal; line-height: 1.7rem; }
 
 .eaton-footer-top .eaton-text-default__content a { color: #005EB8; }
 
-@media screen and (min-width: 992px) { .eaton-footer-top .eaton-text-default__content { font-family: Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; } }
+@media screen and (min-width: 992px) { .eaton-footer-top .eaton-text-default__content { font-family: Arial, sans-serif; font-size: 1.8rem; font-weight: normal; line-height: 2.4rem; } }
 
 .eaton-footer-top .eaton-text-default__content p { font-size: 1.7rem; line-height: 2.8rem; }
 
