--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -100,7 +100,7 @@ em { font-style: italic; }
 
 i { font-style: normal; }
 
-p { line-height: 1.3; }
+p { line-height: 1.4; }
 
 a:link, a:visited, a:active { text-decoration: none; }
 
@@ -194,7 +194,7 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .u-is-fixed { position: fixed; }
 
-.overlay-mask { background-color: #FFF; left: 0; opacity: .8; position: absolute; top: 0; width: 100%; z-index: 300; }
+.u-overlay-mask { background-color: #FFF; opacity: .8; position: absolute; left: 0; top: 0; width: 100%; z-index: 500; }
 
 .u-absolute-fill { position: absolute; left: 0; top: 0; width: 100%; height: 100%; }
 
@@ -254,7 +254,7 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .b-button { background: none; text-shadow: none; border-radius: 0; border-style: solid; display: inline-block; font-weight: bold; max-width: 600px; }
 
-.b-button__primary { border-width: 3px; font-size: 1.25em; padding: 20px 40px; }
+.b-button__primary { border-width: 3px; font-size: 1.9rem; padding: 20px 40px; }
 
 .b-button__primary.b-button__primary--light { border-color: #005EB8; color: #005EB8; }
 
@@ -264,7 +264,9 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .b-button__primary.b-button__primary--dark:hover, .b-button__primary.b-button__primary--dark:active, .b-button__primary.b-button__primary--dark:focus { color: #005EB8; background: #FFF; text-decoration: none; }
 
-.b-button__secondary { border-width: 3px; font-size: 0.875em; padding: 20px; }
+@media screen and (min-width: 992px) { .b-button__primary { font-size: 2rem; } }
+
+.b-button__secondary { border-width: 3px; font-size: 1.6rem; padding: 20px; }
 
 .b-button__secondary.b-button__secondary--light { border-color: #005EB8; color: #005EB8; }
 
@@ -274,7 +276,9 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .b-button__secondary.b-button__secondary--dark:hover, .b-button__secondary.b-button__secondary--dark:active, .b-button__secondary.b-button__secondary--dark:focus { color: #005EB8; background: #FFF; text-decoration: none; }
 
-.b-button__tertiary { border-width: 3px; font-size: 1.25em; padding: 20px 40px; }
+@media screen and (min-width: 992px) { .b-button__secondary { font-size: 1.4rem; } }
+
+.b-button__tertiary { border-width: 3px; font-size: 1.9rem; padding: 20px 40px; }
 
 .b-button__tertiary.b-button__tertiary--light { border-color: #005EB8; background-color: #005EB8; color: #FFF; }
 
@@ -283,6 +287,8 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 .b-button__tertiary.b-button__tertiary--dark { border: 0; background-color: #005EB8; color: #FFF; }
 
 .b-button__tertiary.b-button__tertiary--dark:hover, .b-button__tertiary.b-button__tertiary--dark:active, .b-button__tertiary.b-button__tertiary--dark:focus { background: #FFF; color: #005EB8; text-decoration: none; }
+
+@media screen and (min-width: 992px) { .b-button__tertiary { font-size: 2rem; } }
 
 @media screen and (max-width: 767px) { .b-button { max-width: 100%; }
   .b-button__secondary { font-size: 1em; } }
