--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -87,12 +87,22 @@
 
 .related-products-component { padding: 30px 0; }
 
-.related-products-component__text { padding-left: 15px; padding-bottom: 30px; }
+.related-products-component__text { padding-left: 15px; padding-bottom: 50px; }
+
+@media screen and (max-width: 767px) { .related-products-component__text { padding-bottom: 25px; } }
+
+.related-products-component__description { padding-top: 10px; }
+
+@media screen and (max-width: 767px) { .related-products-component__description { padding-top: 5px; } }
 
 .related-products-component__card { background-color: #F8F8F8; padding: 0 15px; margin-right: 15px; border: 1px solid #EEF0F2; }
 
-.related-products-component__title { padding-top: 15px; }
+.related-products-component__info { padding: 0 15px; }
+
+@media screen and (min-width: 768px) { .related-products-component__info { padding: 0 30px; } }
+
+.related-products-component__title { padding-top: 15px; padding-bottom: 5px; }
 
 .related-products-component__arrow { bottom: 35%; }
 
-@media screen and (min-width: 992px) { .related-products-component__title { padding-top: 30px; } }
+@media screen and (min-width: 992px) { .related-products-component__title { padding-top: 30px; padding-bottom: 10px; } }
