--- a/eaton.frontend/src/components/tabbed-menu-list/css/tabbed-menu-list.scss
+++ b/eaton.frontend/src/components/tabbed-menu-list/css/tabbed-menu-list.scss
@@ -23,7 +23,7 @@
     span {
 
       &::before {
-        @extend %glyphicon-sign-minus;
+        @extend %icon-sign-minus;
       }
     }
 
@@ -32,7 +32,7 @@
       span {
 
         &::before {
-          @extend %glyphicon-sign-plus;
+          @extend %icon-sign-plus;
         }
       }
     }
