--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-glyphicon-font.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-glyphicon-font.html
@@ -18,7 +18,7 @@
       <br /><br /><br />
 
 
-      <div class="alert alert-info"><strong>Example:</strong>When used as a Button / Link:</div>
+      <div class="alert alert-info"><strong>Example:</strong> When used as a Button / Link:</div>
       <pre>HTML:
 ------------
 &lt;button class="mobile-nav-toggle"&gt;
@@ -35,8 +35,8 @@
 .a-sample-component {
 
   &::after {
-    @extend %glyphicon-font-family;
-    @extend %glyphicon-badge;
+    @extend %font-family-glyphicon;
+    @extend %icon-hamburger;
     font-size: 20px;
   }
 }     </pre>
