[styleguide] Update color for all links <a> tags. Override bootstrap’s default values with eaton-blue color

--- a/eaton.frontend/src/global/css/base/_typography.scss
+++ b/eaton.frontend/src/global/css/base/_typography.scss
@@ -34,17 +34,21 @@ p {
 }
 
 a {
+  color: $color__primary-blue;
 
-  &:link,
   &:visited,
   &:active {
     text-decoration: none;
   }
+
+  &:hover,
+  &:focus {
+    color: $color__primary-blue;
+    text-decoration: underline;
+  }
 }
 
-a:hover {
-  text-decoration: underline;
-}
+
 
 
 // Headings
