--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-scss-helpers.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-scss-helpers.html
@@ -31,27 +31,47 @@
                 <tr>
                   <td>H1</td>
                   <td><code> class="b-heading-h1" </code></td>
-                  <td>Heading 1 appearance for Desktop / Mobile Breakpoints</td>
+                  <td><strong>H1</strong> style for Desktop &amp; Mobile breakpoints</td>
                 </tr>
                 <tr>
                   <td>H2</td>
                   <td><code> class="b-heading-h2" </code></td>
-                  <td>Heading 2 appearance for Desktop / Mobile Breakpoints</td>
+                  <td><strong>H2</strong> style for Desktop &amp; Mobile breakpoints</td>
                 </tr>
                 <tr>
                   <td>H3</td>
                   <td><code> class="b-heading-h3" </code></td>
-                  <td>Heading 3 appearance for Desktop / Mobile Breakpoints</td>
+                  <td><strong>H3</strong> style for Desktop &amp; Mobile breakpoints</td>
                 </tr>
                 <tr>
                   <td>H4</td>
                   <td><code> class="b-heading-h4" </code></td>
-                  <td>Heading 4 appearance for Desktop / Mobile Breakpoints</td>
+                  <td><strong>H4</strong> style for Desktop &amp; Mobile breakpoints</td>
                 </tr>
                 <tr>
                   <td>H5</td>
                   <td><code> class="b-heading-h5" </code></td>
-                  <td>Heading 5 appearance for Desktop / Mobile Breakpoints</td>
+                  <td><strong>H5</strong> style for Desktop &amp; Mobile breakpoints</td>
+                </tr>
+                <tr>
+                  <td>Body Copy</td>
+                  <td><code> class="b-body-copy" </code></td>
+                  <td><strong>body-copy</strong> Style for Desktop &amp; Mobile breakpoints</td>
+                </tr>
+                <tr>
+                  <td>Body Copy Small</td>
+                  <td><code> class="b-body-copy-small" </code></td>
+                  <td><strong>body-copy-small</strong> Style for Desktop &amp; Mobile breakpoints</td>
+                </tr>
+                <tr>
+                  <td>Eyebrow Large</td>
+                  <td><code> class="b-eyebrow-large" </code></td>
+                  <td><strong>eyebrow-large</strong> Style for Desktop &amp; Mobile breakpoints</td>
+                </tr>
+                <tr>
+                  <td>Eyebrow Small</td>
+                  <td><code> class="b-eyebrow-small" </code></td>
+                  <td><strong>eyebrow-small</strong> Style for Desktop &amp; Mobile breakpoints</td>
                 </tr>
               </tbody>
             </table>
@@ -78,9 +98,34 @@
               </thead>
               <tbody>
                 <tr>
-                  <td>Button Primary - Light</td>
+                  <td>Primary Light</td>
                   <td><code>class="b-button b-button__primary b-button__primary--light"</code></td>
-                  <td>Primary CTA/Button when used over white / light background</td>
+                  <td>Primary CTA/Button over <strong>White / Light</strong> background</td>
+                </tr>
+                <tr>
+                  <td>Primary Dark</td>
+                  <td><code>class="b-button b-button__primary b-button__primary--dark"</code></td>
+                  <td>Primary CTA/Button over <strong>Dark</strong> background</td>
+                </tr>
+                <tr>
+                  <td>Secondary Light</td>
+                  <td><code>class="b-button b-button__secondary b-button__secondary--light"</code></td>
+                  <td>Secondary CTA/Button over <strong>White / Light</strong> background</td>
+                </tr>
+                <tr>
+                  <td>Secondary Dark</td>
+                  <td><code>class="b-button b-button__secondary b-button__secondary--dark"</code></td>
+                  <td>Secondary CTA/Button over <strong>Dark</strong> background</td>
+                </tr>
+                <tr>
+                  <td>Tertiarly Light</td>
+                  <td><code>class="b-button b-button__tertiary b-button__tertiary--light"</code></td>
+                  <td>Tertiarly CTA/Button over <strong>White / Light</strong> background</td>
+                </tr>
+                <tr>
+                  <td>Tertiarly Dark</td>
+                  <td><code>class="b-button b-button__tertiary b-button__tertiary--dark"</code></td>
+                  <td>Tertiarly CTA/Button over <strong>Dark</strong> background</td>
                 </tr>
               </tbody>
             </table>
@@ -91,7 +136,7 @@
         <div class="panel-heading" role="tab" id="sg-scss-helpers-heading-3">
           <h4 class="panel-title">
             <a class="u-show collapsed" role="button" data-toggle="collapse" data-parent="#sg-scss-helpers-accordion" href="#sg-scss-helpers-pane-3" aria-expanded="false" aria-controls="sg-scss-helpers-pane-3">
-              SCSS Mixins
+              SCSS Utils <small>(Functions, Mixins, Placeholders)</small>
             </a>
           </h4>
         </div>
@@ -100,16 +145,46 @@
             <table class="b-body-copy-small">
               <thead>
                 <tr class="b-body-copy-small">
-                  <td width="20%">Stlye Name</td>
-                  <td width="40%">CSS Classes</td>
-                  <td width="40%">Info</td>
+                  <td width="30%">Name</td>
+                  <td width="40%">Code Sample</td>
+                  <td width="30%">Info</td>
                 </tr>
               </thead>
               <tbody>
                 <tr>
                   <td>Convert PX to REM</td>
-                  <td><code>rem(24px)</code> // Output 2.4rem</td>
-                  <td>SASS Function pixels to rems</td>
+                  <td><code>rem(24px)</code> &nbsp;&nbsp;/* output: 2.4rem */</td>
+                  <td>SASS Function: pixels to rems</td>
+                </tr>
+                <tr>
+                  <td>MediaQuery <strong>Mobile &amp; Tablet</strong></td>
+                  <td><code>@include media-mobile-and-tablet { ... }</code></td>
+                  <td>SASS Mixin. @media 0 to 991px</td>
+                </tr>
+                <tr>
+                  <td>MediaQuery <strong>Desktop &amp; Desktop Large</strong> </td>
+                  <td><code>@include media-desktop-and-up { ... }</code></td>
+                  <td>SASS Mixin. @media greater than 992px</td>
+                </tr>
+                <tr>
+                  <td>MediaQuery <strong>Mobile</strong> </td>
+                  <td><code>@include media-mobile-only { ... }</code></td>
+                  <td>SASS Mixin. @media 0 to 767px</td>
+                </tr>
+                <tr>
+                  <td>MediaQuery <strong>Tablet</strong></td>
+                  <td><code>@include media-tablet-only { ... }</code></td>
+                  <td>SASS Mixin. @media 768px to 991px</td>
+                </tr>
+                <tr>
+                  <td>MediaQuery <strong>Desktop</strong></td>
+                  <td><code>@include media-desktop-only { ... }</code></td>
+                  <td>SASS Mixin. @media 992 to 1199px</td>
+                </tr>
+                <tr>
+                  <td>MediaQuery <strong>Desktop Large</strong> </td>
+                  <td><code>@include media-desktop-large { ... }</code></td>
+                  <td>SASS Mixin. @media greater than 1200px</td>
                 </tr>
               </tbody>
             </table>
