[EATON-250] - CTA Component - Class for White and Blue

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/cta/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/cta/views/view-default.html
@@ -3,7 +3,7 @@
   <a data-sly-test="${ data.cta }"
     href="${ data.cta.url }"
     target="${ data.cta.target }"
-    class="b-button b-button__primary b-button__primary--light"
+    class="${ data.cta.cssClasses }"
     role="button"
   >${ data.cta.title }</a>
 
