Rename Title Text Image Link components to TTIL - Based on Sprint 2 refactor

--- a/eaton.frontend/src/components/ttil-list/css/ttil-list.scss
+++ b/eaton.frontend/src/components/ttil-list/css/ttil-list.scss
@@ -1,8 +1,8 @@
 //-----------------------------------
-// Component M-0: Link List
+// Component TTIL-List - (Title Text Image Link List)
 //-----------------------------------
 
-// Import All SASS config files (Variables, Mixins, Functions, Extends etc...)
+// Import All SASS config files (Variables, Mixins, Functions etc...)
 @import "../../../global/css/_config/sass";
 
 // Import SubViews
