--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -45,11 +45,11 @@
   .eaton-landing-hero--single .carousel-component-slide__separator { display: none; }
   .eaton-landing-hero--single .carousel-component-slide__text { font-size: 14px; } }
 
+.featured-story-component .rendition__image { width: 100%; }
+
 .featured-story-component__content { padding: 60px 40px; }
 
 .featured-story-component__text { color: #FFF; font-size: 2.3em; font-family: "Eaton", Arial, sans-serif; line-height: 1.25em; padding-top: 30px; }
-
-.featured-story-component__image { width: 100%; }
 
 .featured-story-component__row--nopadding { padding: 0; }
 
