[EATON-444] Add icons for social Networks - WIP

--- a/eaton.frontend/src/global/css/_config/variables/_variables-colors.scss
+++ b/eaton.frontend/src/global/css/_config/variables/_variables-colors.scss
@@ -24,3 +24,12 @@ $color__black:              #000;
 $color__white:              #FFF;
 $color__green:              #4C8C2B;
 $color__red:                #9D2235;
+
+
+// Social Links
+//--------------
+$color__facebook:           #2C578F;
+$color__twitter:            #0FA9D0;
+$color__googleplus:         #D44A3A;
+$color__linked-in:          #3699C6;
+$color__pinterest:          #D02127;
