--- a/eaton.frontend/src/components/social-links/css/social-links.scss
+++ b/eaton.frontend/src/components/social-links/css/social-links.scss
@@ -21,6 +21,14 @@
     margin-right: 18px;
   }
 
+  // Icon Color - Social Networks
+  .icon-facebook { color: $color__facebook; }
+  .icon-twitter { color: $color__twitter; }
+  .icon-googleplus { color: $color__googleplus; }
+  .icon-linked-in { color: $color__linked-in; }
+  .icon-pinterest { color: $color__pinterest; }
+
+  // Page Link
   &__page-link { font-size: 18px; }
 
   &__page-link-icon { font-size: 0.7em; }
