[EATON-81] Update Rendition images component - Determine current Breakpoint with JS

--- a/eaton.frontend/src/shared/renditions/css/renditions.scss
+++ b/eaton.frontend/src/shared/renditions/css/renditions.scss
@@ -15,18 +15,18 @@
 // Responsive Images
 //-------------
 // NOTE: These values are used as helpers in JavaScript to determine the current Breakpoint
-[data-mobile-rendition] {
-
-  // Default Value Mobile
-  min-width: 2px;
-
-  // If Tablet ( Between 768px and 991px )
-  @media all and (min-width: $grid__sm) and (max-width: $grid__sm-max) {
-    min-width: 1px;
-  }
-
-  // If Desktop & Desktop Large ( Greater than 992px )
-  @media all and (min-width: $grid__md) {
-    min-width: 0;
-  }
-}
+// [data-mobile-rendition] {
+//
+//   // Default Value Mobile
+//   min-width: 2px;
+//
+//   // If Tablet ( Between 768px and 991px )
+//   @media all and (min-width: $grid__sm) and (max-width: $grid__sm-max) {
+//     min-width: 1px;
+//   }
+//
+//   // If Desktop & Desktop Large ( Greater than 992px )
+//   @media all and (min-width: $grid__md) {
+//     min-width: 0;
+//   }
+// }
